--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,22 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+<nav class="navbar navbar-toggleable-md  fixed-top ">
 
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="/home" routerLink="/home">Inicio</a>
       </li>
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" routerLinkActive="/home" routerLink="/home" >(Aqui va el Logo)</a>
+    <a class="navbar-brand mx-auto" routerLinkActive="/home" routerLink="/home" ><img src="/assets/brand/logo.png" width="70" height="70"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLinkActive="/home" routerLink="/home" class="nav-link" (click)="signOut()">Ingresar</a>
+        <a routerLinkActive="/signin" routerLink="/signin" class="nav-link" >Ingresar</a>
       </li>
 
       <li *ngIf="isLoggedIn()" class="nav-item">
@@ -29,6 +29,14 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<footer>
+  <hr>
+  <div class="text-center center-block">
+    <p class="txt-railway">- App de Sitios -</p>
+ </div>
+  <hr>
+</footer>
 
 
 
