--- a/src/app/pages/sites-page/sites-page.component.css
+++ b/src/app/pages/sites-page/sites-page.component.css
@@ -29,3 +29,29 @@
     background-color: #cf7b04;
     color: white;
 }
+
+.btnHref{
+        background: #cf7b04;
+        width: 130px;
+        height: 40px;
+    color: #cf7b04;
+    padding: 5px 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        background-color: white;
+        border: 2px solid #cf7b04;
+        margin: 0 auto;
+}
+
+.btnHref:hover {
+    background-color: #cf7b04;
+    color: white;
+}
+
