--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,37 @@
 .navbar {
+    background-color: #cf7b04;
+    box-shadow: 10px 10px 30px #999;
+}
+
+.styleA{
+    background-color: #cf7b04;
+    color: white;
+    padding: 8px 15px;
+    text-aling: center;
+    text-decoration: none;
+    display: inline-block;
+    -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.9s;
+        cursor: pointer;
+
+}
+
+
+
+.styleA:hover{
     background-color: white;
-    border-color: #E7E7E7;
+    color: #cf7b04;
+}
+
+
+.image:hover {
+    opacity: 0.7;
+}
+
+footer {
+    width: 100%;
+    height:60 px;
+    padding-top: 100px;
+    position: absolute;
+    bottom:0;
 }
