--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,24 +3,37 @@
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="/home" routerLink="/home">Inicio</a>
+        <a class="styleA" routerLinkActive="/categorys" routerLink="/categorys">Categorias</a>
       </li>
+      &nbsp;
+      &nbsp;
+      &nbsp;
     </ul>
   </div>
   <div class="mx-auto order-0">
-    <a class="navbar-brand mx-auto" routerLinkActive="/home" routerLink="/home" ><img src="/assets/brand/logo.png" width="70" height="70"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+
+    <a class="styleLogo" routerLinkActive="/categorys" routerLink="/categorys" ><img class="image" src="/assets/brand/logo.png" width="70" height="70"></a>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="navbar-nav mr-auto">
+      &nbsp;
+      &nbsp;
+      &nbsp;
       <li class="nav-item">
-        <a routerLinkActive="/signin" routerLink="/signin" class="nav-link" >Ingresar</a>
+        <a  routerLinkActive="/contact" routerLink="/contact"  class="styleA" >Contactanos</a>
       </li>
 
+
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a *ngIf="!isLoggedIn()" routerLinkActive="/signin" routerLink="/signin"  class="styleA" >Ingresa</a>
+      </li>
+      <li class="nav-item">
+        <a *ngIf="!isLoggedIn()" routerLinkActive="/signup" routerLink="/signup"  class="styleA" >Resgistrate</a>
+      </li>
       <li *ngIf="isLoggedIn()" class="nav-item">
-        <a routerLinkActive="/home" routerLink="/home" class="nav-link" (click)="signOut()">Salir</a>
+        <a routerLinkActive="/categorys" routerLink="/categorys" class="styleA" (click)="signOut()">Salir</a>
       </li>
     </ul>
   </div>
