--- a/src/app/pages/category-page/category-page.component.html
+++ b/src/app/pages/category-page/category-page.component.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="container">
+    <br>
+    <div class="row">
 
-</body>
-</html>
+        <div *ngFor="let cl of categoryList" class="col-xs-6 col-xs-3">
+            <br>
+            <a (click)="saveCategory(cl.name)" routerLinkActive="/sites" routerLink="/sites"  class="btn btn1" role="button" aria-pressed="true">
+                <img src="{{cl.image}}" width="190" height="190"><HR><p>{{cl.name}}</p></a>
+        </div>
+    </div>
+</div>
