--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,6 +1,11 @@
+<br>
+<br><br>
+<br>
+<br>
+
 <p>
   The page you were looking for was not found
 </p>
 <p>
-  <a routerLink="/">Back to Home</a>
+  <a routerLink="/categorys">Back to Home</a>
 </p>
