--- a/src/app/pages/sign-in/sign-in-page.component.html
+++ b/src/app/pages/sign-in/sign-in-page.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <br>
+    <br>
+    <br>
     <h2>Sign In</h2>
     <form [formGroup]="signInForm" (ngSubmit)="doLogin()" novalidate>
         <div class="form-group">
@@ -8,7 +11,7 @@
 
         <div class="form-group">
             <label for="priority">Password</label>
-            <input type="password" class="form-control" id="alterEgo" formControlName="password">
+            <input type="password" class="form-control" id="alterEgo" formControlName="password" required>
         </div>
 
         <button type="submit" class="btn btn-success" [disabled]="!signInForm.valid">Sign In</button>
@@ -16,4 +19,5 @@
         <p class="text-danger mt-1" *ngIf="loginError">{{loginError}}</p>
 
     </form>
+
 </div>
