--- a/src/app/pages/sites-page/sites-page.component.html
+++ b/src/app/pages/sites-page/sites-page.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <br>
+  <a class="btnHref" routerLinkActive="/categorys" routerLink="/categorys"><img src="/assets/images/flechaatras.png" width="30" height="30">Categorias</a>
   <div class="row">
 
-    <div *ngFor="let ul of userslist" class="col-xs-6 col-md-3">
+    <div *ngFor="let ul of userslist" class="col-xs-6 col-xs-3">
       <br>
       <a (click)="saveSite(ul.username)" routerLinkActive="/siteProfile" routerLink="/siteProfile"  class="btn btn1" role="button" aria-pressed="true">
         <img src="{{ul.logo}}" width="190" height="190"><HR><p>{{ul.companyName}}</p><p>{{ul.companyAddres}}</p></a>
