--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="styleA" routerLinkActive="/categorys" routerLink="/categorys">Categorias</a>
+        <a class="styleA" routerLinkActive="/categorys" routerLink="/categorys">Categorías</a>
       </li>
       &nbsp;
       &nbsp;
