--- a/src/app/pages/sites-page/sites-page.component.html
+++ b/src/app/pages/sites-page/sites-page.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <br>
-  <a class="btnHref" routerLinkActive="/categorys" routerLink="/categorys"><img src="/assets/images/flechaatras.png" width="30" height="30">Categorias</a>
   <div class="row">
 
     <div *ngFor="let ul of userslist" class="col-xs-6 col-xs-3">
@@ -8,5 +7,8 @@
       <a (click)="saveSite(ul.username)" routerLinkActive="/siteProfile" routerLink="/siteProfile"  class="btn btn1" role="button" aria-pressed="true">
         <img src="{{ul.logo}}" width="190" height="190"><HR><p>{{ul.companyName}}</p><p>{{ul.companyAddres}}</p></a>
     </div>
+
   </div>
+  <a class="btnHref" routerLinkActive="/categorys" routerLink="/categorys"><img src="/assets/images/flechaatras.svg" width="30" height="30">      Categorías</a>
+
 </div>
