--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,13 +25,9 @@
 
 
 .image:hover {
+    width: 100px;
+    height: 100px;
+    transition-duration: 0.9s;
     opacity: 0.7;
 }
 
-footer {
-    width: 100%;
-    height:60 px;
-    padding-top: 100px;
-    position: absolute;
-    bottom:0;
-}
