--- a/src/app/pages/category-page/category-page.component.css
+++ b/src/app/pages/category-page/category-page.component.css
@@ -6,6 +6,7 @@
   }
 
 .btn {
+    border-radius: 50%;
         background: white;
         width: 250px;
         height: 320px;
@@ -22,10 +23,14 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
         background-color: white;
         color: black;
-        border: 2px solid #cf7b04;
+        //border: 2px solid #cf7b04;
 }
 
 .btn:hover {
     background-color: #cf7b04;
     color: white;
+}
+
+img {
+    border-radius: 50%;
 }
