--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="mx-auto order-0">
 
-    <a class="styleLogo" routerLinkActive="/categorys" routerLink="/categorys" ><img class="image" src="/assets/brand/logo.png" width="70" height="70"></a>
+    <a class="styleLogo" routerLinkActive="/categorys" routerLink="/categorys" ><img class="image" src="/favicon.ico" width="70" height="70"></a>
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="navbar-nav mr-auto">
