--- a/src/app/pages/sign-in/sign-in-page.component.html
+++ b/src/app/pages/sign-in/sign-in-page.component.html
@@ -2,15 +2,15 @@
     <br>
     <br>
     <br>
-    <h2>Sign In</h2>
+    <h2>Ingresa</h2>
     <form [formGroup]="signInForm" (ngSubmit)="doLogin()" novalidate>
         <div class="form-group">
-            <label for="description">Username</label>
+            <label for="description">Usuario</label>
             <input type="text" class="form-control" id="description" formControlName="username" required>
         </div>
 
         <div class="form-group">
-            <label for="priority">Password</label>
+            <label for="priority">Contraseña</label>
             <input type="password" class="form-control" id="alterEgo" formControlName="password" required>
         </div>
 
@@ -19,5 +19,9 @@
         <p class="text-danger mt-1" *ngIf="loginError">{{loginError}}</p>
 
     </form>
-
+    <br>
+    <br>
+    <br>    <br>
+    <br>
+    <br>
 </div>
