--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,13 +43,12 @@
   <router-outlet></router-outlet>
 </div>
 
-<footer>
-  <hr>
-  <div class="text-center center-block">
-    <p class="txt-railway">- App de Sitios -</p>
- </div>
-  <hr>
-</footer>
-
+<div id="mybutton">
+  <a target="_blank" href="http://www.facebook.com" class="fa fa-facebook"></a>
+  <br>
+  <a target="_blank" href="http://www.facebook.com" class="fa fa-twitter"></a>
+  <br>
+  <a target="_blank" href="http://www.facebook.com" class="fa fa-instagram"></a>
+</div>
 
 
