--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,3 +31,43 @@
     opacity: 0.7;
 }
 
+.fixedButtons {
+  background-color : #31B0D5;
+  color: white;
+  padding: 0px 0px;
+}
+
+#mybutton {
+  position: fixed;
+  bottom: 300px;
+  left: 0px;
+}
+
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  margin: 0px 0px;
+  text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
