--- a/src/app/pages/site-profile/site-profile.component.css
+++ b/src/app/pages/site-profile/site-profile.component.css
@@ -1,2 +1,67 @@
 .izquierda { width: 50%; background: #ccc; float: left; height: 500px; }
 .derecha {width: 50%;  background: #ddf; float: right; height: 500px; }
+
+.container{
+    position: relative;
+    width: 1300px;
+    align-content: center;
+    background-color: transparent;
+  }
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.card-body {
+    padding: 10px 10px 10px 10px;
+}
+
+.card-img-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 160px;
+    left: 0;
+    padding: 0rem;
+}
+
+.promo {
+    padding: 5px 10px;
+    color: white;
+    background: rgba(232, 22, 22, 0.6);
+    display: inline-block;
+    border-radius: 8px;
+   }
+
+
+.fa {
+  padding: 15px;
+  font-size: 30px;
+  width: 60px;
+  text-align: center;
+  text-decoration: none;
+  height: 60px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-instagram {
+  background: #ff6600;
+  color: white;
+}
