--- a/src/app/pages/category-page/category-page.component.html
+++ b/src/app/pages/category-page/category-page.component.html
@@ -2,15 +2,17 @@
     <br>
     <br>
     <div>
-        <h3>En (nombre empresa) podras conocer lo mejores lugares para realizar planes con tu familia y amigos ...</h3>
-        <h2>Conoce los mejores lugares de</h2><h1>Cajicá</h1>
+        <h2>En <img class="image" src="/assets/brand/logo.png" width="180" height="70"> podras conocer lo mejores lugares para realizar planes con tu familia y amigos ...</h2>
+        <h5>Conoce los mejores lugares de<font size="8"> Cajicá</font></h5>
     </div>
     <div class="row">
 
         <div *ngFor="let cl of categoryList" class="col-xs-6 col-xs-3">
             <br>
             <a (click)="saveCategory(cl.name)" routerLinkActive="/sites" routerLink="/sites"  class="btn btn1" role="button" aria-pressed="true">
-                <img src="{{cl.image}}" width="190" height="190"><HR><h5>{{cl.name}}</h5></a>
+                <img src="{{cl.image}}" width="100%" height="100%"><h5>{{cl.name}}</h5></a>
         </div>
     </div>
+
+
 </div>
