--- a/src/app/pages/coupon-page/coupon-page.component.css
+++ b/src/app/pages/coupon-page/coupon-page.component.css
@@ -1,6 +1,3 @@
-.izquierda { width: 50%; background: #ccc; float: left; height: 500px; }
-.derecha {width: 50%;  background: #ddf; float: right; height: 500px; }
-
 .container{
     position: relative;
     width: 1500px;
@@ -28,6 +25,12 @@
 }
 
 
+
+.btn-Primary{
+    background-color: #cf7b04;
+    color: white;
+}
+
 .card-img-overlay {
     position: absolute;
     top: 0;
@@ -52,33 +55,3 @@
     display: inline-block;
     border-radius: 8px;
    }
-
-
-.fa {
-  padding: 15px;
-  font-size: 30px;
-  width: 70px;
-  text-align: center;
-  text-decoration: none;
-  height: 60px;
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.fa-instagram {
-  background: #ff6600;
-  color: white;
-}
-
-.fa-tripadvisor {
-  background: #3CA048;
-  color: white;
-}
