--- a/src/app/pages/category-page/category-page.component.html
+++ b/src/app/pages/category-page/category-page.component.html
@@ -2,7 +2,9 @@
     <br>
     <br>
     <div>
-        <h2>En <img class="image" src="/assets/brand/logo.png" width="180" height="70"> podras conocer lo mejores lugares para realizar planes con tu familia y amigos ...</h2>
+
+
+        <h2>En <img class="image" src="/assets/brand/logo.png" width="195" height="70"> podras conocer lo mejores lugares para realizar planes con tu familia y amigos ...</h2>
         <h5>Conoce los mejores lugares de<font size="8"> Cajicá</font></h5>
     </div>
     <div class="row">
@@ -10,9 +12,17 @@
         <div *ngFor="let cl of categoryList" class="col-xs-6 col-xs-3">
             <br>
             <a (click)="saveCategory(cl.name)" routerLinkActive="/sites" routerLink="/sites"  class="btn btn1" role="button" aria-pressed="true">
-                <img src="{{cl.image}}" width="100%" height="100%"><h5>{{cl.name}}</h5></a>
+                <div class="card text-center">
+                    <img src="{{cl.image}}" width="100%" height="100%">
+                    <div class="card-img-overlay">
+                        {{cl.name}}
+                    </div>
+                </div>
+                </a>
+            <br>
         </div>
     </div>
-
-
+    <br>
+    <br>
+    <br>
 </div>
