--- a/src/app/pages/category-page/category-page.component.css
+++ b/src/app/pages/category-page/category-page.component.css
@@ -5,6 +5,16 @@
     background-color: transparent;
   }
 
+.card-body {
+    padding: 10px 0px 10px 30px;
+
+}
+
+.card{
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
 .btn {
         background: white;
         width: 250px;
@@ -20,6 +30,7 @@
         background-color: white;
         color: black;
 }
+
 
 .btn:hover {
     color: black;
@@ -42,7 +53,7 @@
 
 
 
-img:hover {
+.category:hover {
  -webkit-transition-duration: 1s; /* Safari */
     transition-duration: 1s;
     opacity: 0.3;
