--- a/src/app/pages/coupon-page/coupon-page.component.html
+++ b/src/app/pages/coupon-page/coupon-page.component.html
@@ -1,11 +1,13 @@
 <br>
 <br>
-<div id="content" #content>
 
-    <p>{{currentCoupon.name}}</p>
-    <p>{{currentCoupon.newPrice}}</p>
-    <p>{{currentCoupon.description}}</p>
-    <p>{{currentCoupon.smallLetters}}</p>
+<div id="content"  #content>
+
+    <font size="16px">{{currentCoupon.name}}</font><br>
+    <font size="2px">Anterior precio: <del>{{currentCoupon.lastPrice}}</del></font><br>
+    <font size="5px">Precio actual: {{currentCoupon.newPrice}}</font><br>
+    <font size="4">Descrpción: {{currentCoupon.description}}</font><br>
+    <font size="0">{{currentCoupon.smallLetters}}</font><br>
 
 </div>
 <a (click)="downloadPdf()" class="btn btn-primary">Descargar</a>
