--- a/src/app/pages/site-profile/site-profile.component.html
+++ b/src/app/pages/site-profile/site-profile.component.html
@@ -28,12 +28,13 @@
             <div class="card-body">
                 <h4 class="card-title">{{c.name}}</h4>
                 <p class="card-text">{{c.description}}</p>
-                <a (click)="saveCouponName(c.name)" class="btn btn-primary">Ver</a>
+                <a (click)="saveCouponName(c.name)" class="btn btn-primary"><font color="white">Ver</font></a>
                 <br>
                 <font size="0">{{c.smallLetters}}</font>
 
             </div>
         </div>
+
 
     </div>
     </div>
