--- a/src/app/pages/category-page/category-page.component.html
+++ b/src/app/pages/category-page/category-page.component.html
@@ -13,7 +13,7 @@
             <br>
             <a (click)="saveCategory(cl.name)" routerLinkActive="/sites" routerLink="/sites"  class="btn btn1" role="button" aria-pressed="true">
                 <div class="card text-center">
-                    <img src="{{cl.image}}" width="100%" height="100%">
+                    <img class="category" src="{{cl.image}}" width="100%" height="100%">
                     <div class="card-img-overlay">
                         {{cl.name}}
                     </div>
@@ -24,5 +24,24 @@
     </div>
     <br>
     <br>
-    <br>
+    <div class="card" style="width: 1000px">
+
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><font size="5">Principales Marcas</font></li>
+            <li class="list-group-item">
+                <div class="card-body">
+                    <div class="row" >
+                        <div *ngFor="let ul of userslist" class="col-xs-4">
+                            <img class="center" src="{{ul.logo}}" width="80" height="80">
+                        </div>
+
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+
+    </div>
+
 </div>
+
