--- a/src/app/pages/category-page/category-page.component.html
+++ b/src/app/pages/category-page/category-page.component.html
@@ -5,8 +5,9 @@
 
 
         <h2>En <img class="image" src="/assets/brand/logo.png" width="195" height="70"> podras conocer lo mejores lugares para realizar planes con tu familia y amigos ...</h2>
-        <h5>Conoce los mejores lugares de<font size="8"> Cajicá</font></h5>
+
     </div>
+    <font size="4" color="grey">Categorías:</font>
     <div class="row">
 
         <div *ngFor="let cl of categoryList" class="col-xs-6 col-xs-3">
@@ -15,6 +16,8 @@
                 <div class="card text-center">
                     <img class="category" src="{{cl.image}}" width="100%" height="100%">
                     <div class="card-img-overlay">
+                        <br>
+                        <br>
                         {{cl.name}}
                     </div>
                 </div>
