--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,9 +16,20 @@
 
 }
 
-.styleA:hover{
+.styleA:hover {
     background-color: white;
     color: #0e6ebe;
+}
+
+.nav-link{
+    -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.9s;
+        cursor: pointer;
+        color: black;
+}
+
+.nav-link:hover{
+    background-color: #d6d6c2;
 }
 
 
@@ -65,5 +76,33 @@
 .fa-instagram {
   background: #ff6600;
   color: white;
+}
+
+select {
+   color: white;
+   background-color: #0e6ebe;   /* add custom arrow */
+     padding: 8px;
+       border-color: white;
+       border-width: 2px;
+}
+
+
+.dropdown {
+    position: center;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 5px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
