--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,11 +67,11 @@
 </div>
 
 <div id="mybutton">
-  <a target="_blank" href="http://www.facebook.com" class="fa fa-facebook"></a>
+  <a target="_blank" href="https://www.facebook.com/FunnelCol/" class="fa fa-facebook"></a>
   <br>
-  <a target="_blank" href="http://www.facebook.com" class="fa fa-twitter"></a>
+  <a target="_blank" href="https://www.instagram.com/funnelcolombia/" class="fa fa-twitter"></a>
   <br>
-  <a target="_blank" href="http://www.facebook.com" class="fa fa-instagram"></a>
+  <a target="_blank" href="https://www.instagram.com/funnelcolombia/" class="fa fa-instagram"></a>
 </div>
 
 
