--- a/src/app/pages/category-page/category-page.component.html
+++ b/src/app/pages/category-page/category-page.component.html
@@ -30,7 +30,7 @@
     <div class="card" style="width: 1000px">
 
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><font size="5">Principales Marcas</font></li>
+            <li class="list-group-item"><font size="5">Nuestros Aliados</font></li>
             <li class="list-group-item">
                 <div class="card-body">
                     <div class="row" >
